# SFMLProject

./: .gitignore  CMakeLists.txt  README.md
GameFramework/: CMakeLists.txt
GameFramework/include/: Common.h  Component.h  Enemy.h  Entity.h  Game.h  Player.h  Scene.h  Text.h  Transform.h  Vector2f.h
GameFramework/source/: Component.cpp  Enemy.cpp  Entity.cpp  Game.cpp  Player.cpp  Scene.cpp  Text.cpp  Transform.cpp  Vector2f.cpp
Mods/: CMakeLists.txt
Mods/source/: PlayerChanged.cpp
Project/: CMakeLists.txt  main.cpp
Project/include/: AnimationManager.h  Button.h  Common.h  MainMenu.h  Map.h  Play.h  Player.h  SceneManager.h  Text.h
Project/source/: AnimationManager.cpp  Button.cpp  Enemy.cpp  MainMenu.cpp  Map.cpp  Play.cpp  Player.cpp  SceneManager.cpp  Text.cpp
